# apertium-eval-translator

./: AUTHORS  CMakeLists.txt  INSTALL  PER  PER.pl  README  WER  WER.pl  apertium-eval  apertium-eval-translator  apertium-eval-translator-line  apertium-eval-translator-line.pl  apertium-eval-translator.pl  autogen  beam-eval-until-stable  bleu  bleu.sh  bootstrap_resampling  bootstrap_resampling-standalone  bootstrap_resampling-standalone.pl  bootstrap_resampling.pl  eval-translator.pl  install.sh  mteval_by_bootstrap_resampling  mteval_by_bootstrap_resampling.pl  per  per.sh  svn-commit.tmp  ter  ter.sh  wer  wer.sh
